<resources>
    <string name="app_name">Magic Tournament</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordConfirmation">Password Confirmation</string>
    <string name="host">Host</string>
    <string name="player">Player</string>
    <string name="title_activity_tournament">Map</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="is_this_your_location">Is this your location?</string>
    <string name="username">Username</string>
    <string name="tournament_title">Tournament Title</string>
    <string name="format">Format</string>
    <string name="format_type">Format Type</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="tournament_description">Tournament description...</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="applied_tournaments">Applied Tournaments</string>
    <string name="all_tournaments">All Tournaments</string>
    <string name="tournament_title_place_holder">Tournament Title</string>
    <string name="format_place_holder">Format</string>
    <string name="type_place_holder">Type</string>
    <string name="description_place_holder">This is dummy description</string>
    <string name="apply">Apply</string>
    <string name="country_place_holder">Country</string>
    <string name="city_place_holder">City</string>
    <string name="address_place_holder">Address</string>
    <string name="open_map">Open Map</string>
    <string name="close_popup">Close</string>
    <string name="details">Details</string>
    <string name="created_tournaments">Created Tournaments</string>
    <string name="detailTitle">Title</string>
    <string name="start">Start</string>
    <string name="type">Type</string>
    <string name="round_one">Round One</string>
    <string name="round_two">Round Two</string>
    <string name="round_three">Round Three</string>
    <string name="finish">Finish</string>
    <string name="player_one_placeholder">Player One</string>
    <string name="player_two_place_holder">Player Two</string>
    <string name="_0">0</string>
    <string name="winner_placeholder">Winner: Unknown</string>
</resources>