<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tournament_title_place_holder"
                android:textSize="@dimen/title_size">

            </com.google.android.material.textview.MaterialTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/itemFormat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/format_place_holder"
                        android:textSize="@dimen/body_text_site">

                    </com.google.android.material.textview.MaterialTextView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/itemType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/type_place_holder"
                        android:textSize="@dimen/body_text_site">

                    </com.google.android.material.textview.MaterialTextView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/itemDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="01.01.2020. 18:30"
                        android:textSize="@dimen/body_text_site">

                    </com.google.android.material.textview.MaterialTextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="right"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/itemCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/country_place_holder"
                        android:textSize="@dimen/body_text_site">

                    </com.google.android.material.textview.MaterialTextView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/itemCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/city_place_holder"
                        android:textSize="@dimen/body_text_site">

                    </com.google.android.material.textview.MaterialTextView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/itemAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/address_place_holder"
                        android:textSize="@dimen/body_text_site">

                    </com.google.android.material.textview.MaterialTextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/border"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/itemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="3"
                    android:maxLines="6"
                    android:textSize="@dimen/body_text_site"
                    android:text="@string/description_place_holder"
                    >

                </com.google.android.material.textview.MaterialTextView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="16dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/itemShowMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="start"
                    android:text="@string/open_map">

                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/itemApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/alignRightLinear"
                    android:text="@string/apply">
                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/itemDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/alignRightDetails"
                    android:text="@string/details">
                </com.google.android.material.button.MaterialButton>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>