<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateTournament">


    <fragment
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topPadding"
        android:hint="@string/country"
        app:layout_constraintTop_toBottomOf="@+id/mapView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topPadding"
        android:hint="@string/city"
        app:layout_constraintTop_toBottomOf="@+id/etCountry">
        <com.google.android.material.textfield.TextInputEditText
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topPadding"
        app:layout_constraintTop_toBottomOf="@+id/etCity">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address"
            android:gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/etAddress"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/topPadding"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/etAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/topPadding"/>

</androidx.constraintlayout.widget.ConstraintLayout>