<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TournamentInfo">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/infoPadding"
        android:layout_marginTop="@dimen/topPaddingInfo"
        android:layout_marginEnd="@dimen/infoPadding"
        android:hint="@string/tournament_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuFormat"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/infoPadding"
        android:layout_marginTop="@dimen/topPadding"
        android:layout_marginEnd="@dimen/infoPadding"
        android:hint="@string/format"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfTitle">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none">

        </com.google.android.material.textfield.MaterialAutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuFormatType"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/infoPadding"
        android:layout_marginTop="@dimen/topPadding"
        android:layout_marginEnd="@dimen/infoPadding"
        android:hint="@string/format_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuFormat">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none">

        </com.google.android.material.textfield.MaterialAutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/infoPadding"
        android:layout_marginTop="@dimen/topPadding"
        app:layout_constraintTop_toBottomOf="@id/menuFormatType"
        android:hint="@string/select_date"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="@dimen/infoPadding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfDate"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topPadding"
        android:hint="@string/select_time"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutDate"
        android:layout_marginEnd="@dimen/infoPadding"
        android:layout_marginStart="@dimen/infoPadding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfTime"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tournamentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topPadding"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutTime"
        android:layout_marginStart="@dimen/innerLeft"
        android:layout_marginEnd="@dimen/rightPadding">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            android:maxLines="6"
            android:gravity="top|left"
            android:hint="@string/tournament_description">
        </androidx.appcompat.widget.AppCompatEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tASubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tournamentDescription"
        android:layout_marginEnd="@dimen/rightPadding"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/topPadding">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tACancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tournamentDescription"
        android:layout_marginEnd="@dimen/rightPadding"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/topPadding"
        android:layout_marginStart="@dimen/innerLeft"
        style="?attr/materialButtonOutlinedStyle">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>