<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/innerLeft"
        android:layout_marginEnd="@dimen/innerRight">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                app:layout_constraintTop_toBottomOf="@id/emailRegister"
                android:layout_marginTop="@dimen/topPadding">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:layout_constraintTop_toBottomOf="@id/usernameRegister"
                android:layout_marginTop="@dimen/topPadding">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordConfirmationRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordConfirmation"
                app:layout_constraintTop_toBottomOf="@id/passwordRegister"
                android:layout_marginTop="@dimen/topPadding">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/typeGrope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/passwordConfirmationRegister">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/accountHost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/host"
                    android:checked="true">
                </com.google.android.material.radiobutton.MaterialRadioButton>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/accountPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/player">
                </com.google.android.material.radiobutton.MaterialRadioButton>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/goToLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeGrope"
                android:layout_marginTop="@dimen/topPadding"
                android:layout_marginStart="@dimen/innerLeft"
                android:text="@string/login">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/register"
                app:layout_constraintTop_toBottomOf="@id/typeGrope"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/innerRight"
                android:layout_marginTop="@dimen/topPadding">
            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>